prevent links from overflowing
fixes #3

--- a/src/wikipedia.css
+++ b/src/wikipedia.css
@@ -91,6 +91,7 @@ a {
   text-decoration: none;
   color: var(--c-blue-100);
   background: none;
+  word-break: break-all;
 }
 
 a:hover,
